ainda testando coisas

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Shadows+Into+Light">
-  <!-- teste teste teste -->
-  <link rel="stylesheet" href="http://sdfadasdadadsasdadads">
-  <link rel="stylesheet" href="http://sdfadasdadadsasdadads">
+  <!-- apaguei tudo aqui-->
+  <!-- apaguei tudo aqui-->
+  <!-- apaguei tudo aqui-->
 </head>
 
 <body>
