--- a/index.html
+++ b/index.html
@@ -16,101 +16,18 @@
 </head>
 
 <body>
-
-  <nav class="#00796b teal darken-2 z-depth-3">
-    <div class="nav-wraper">
-      <div class="row center-align truncate">
-        <a href="#" class="sidenav-trigger show-on-large" data-target="menu-side"><i class="material-icons">menu</i></a>
-        <a href="#!" class="center"><h5><b>Cálculo do Preço de Impressão</b></h5></a>
-
-      </div>
-
-    </div>
-  </nav>
-
-  <ul class="sidenav" id="menu-side">
-          <li>
-            <div class="user-view">
-              <div class="background">
-                <img src="img/s1.jpg" alt="">
-              </div>
-              <a href="#">
-                <img src="img/marvin.jpg" alt="" class="circle">
-              </a>
-              <a href="#">
-                <span class="name white-text">Maicon Francisco</span>
-                <span class="email white-text">maicon.fr95@gmail.com</span>
-              </a>
-            </div>
-          </li>
-
-          <li>
-            <a class="waves-effect" href="#!"><i class="material-icons">cloud</i>
-              Primeiro elemento
-            </a>
-          </li>
-          <li>
-            <div class="divider">
-            </div>
-          </li>
-          <li>
-            <a href="#">
-              <i class="material-icons">cloud</i>
-              Segundo elemento
-            </a>
-          </li>
-  </ul>
+<!-- todo o conteudo seja posto dinamicamente aqui -->
+<div id="container">
+</div>
 
 
 
-  <div class="container center margem_padrao">
-
-  <!--PESO-->
-  <form class="" action="#">
-
-  <div class="row">
-    <div class="input-field col s12">
-      <input id="peso" type="number" class="validate">
-      <label class="active" for="peso">Peso da peça (g)</label>
-    </div>
-  </div>
-  <!--TEMPO-->
-  <div class="row">
-    <div class="input-field col s12">
-      <input id="tempo" type="number" class="validate">
-      <label class="active" for="tempo">Tempo de Impressão (h)</label>
-    </div>
-  </div>
-
-  <div class="row">
-    <!--BOTÃO-->
-    <a id="botao" class="waves-effect waves-light btn" onclick="calculo()">Calcular</a>
-  </div>
-
-  </form>
-
-  <div class="row">
-    <div class="col s4">
-    </div>
-    <div class="col s4 flow-text">
-      <div class="card teal lighten-2 ">
-        <div class="card-content white-text">
-          <!--RESULTADO-->
-          <span id="resultado" class="resultado">R$ 0.00</span>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-
-
-  </div>
   <!--JavaScript at end of body for optimized loading-->
   <script type="text/javascript" src="js/materialize.min.js"></script>
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="js/init.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
-  <script type="text/javascript" src="js/sidenav.js"></script>
+
 
 </body>
 
