--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 <!-- todo o conteudo seja posto dinamicamente aqui -->
-<div id="container">
+<div id="container" class="container">
 </div>
 
 
@@ -27,7 +27,6 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/class.js"></script>
   <script type="text/javascript" src="js/init.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
 
 
 </body>
