monte de coisas

--- a/app_calc_3d/platforms/browser/www/index.html
+++ b/app_calc_3d/platforms/browser/www/index.html
@@ -18,7 +18,7 @@
 <body>
 <!-- todo o conteudo seja posto dinamicamente aqui -->
 <div id="container" class="container">
-  sasa
+
 </div>
 
 
@@ -28,7 +28,9 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/class.js"></script>
   <script type="text/javascript" src="js/init.js"></script>
-
+<script type="text/javascript">
+    $("#container").append("htmlString/elem/fn/etc")
+</script>
 
 </body>
 
