--- a/app_calc_3d/www/index.html
+++ b/app_calc_3d/www/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -18,7 +17,7 @@
 <body>
 <!-- todo o conteudo seja posto dinamicamente aqui -->
 <div id="container" class="container">
-  sasa
+
 </div>
 
 
@@ -28,7 +27,9 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/class.js"></script>
   <script type="text/javascript" src="js/init.js"></script>
-
+<script type="text/javascript">
+    
+</script>
 
 </body>
 
