--- a/app_calc_3d/platforms/android/app/src/main/assets/www/index.html
+++ b/app_calc_3d/platforms/android/app/src/main/assets/www/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -18,15 +17,13 @@
 <body>
 <!-- todo o conteudo seja posto dinamicamente aqui -->
 <div id="container" class="container">
-<<<<<<< HEAD
-=======
 
->>>>>>> f1bb476544f9484161fc119d70e9b5a8dc462231
 </div>
 
 
 
   <!--JavaScript at end of body for optimized loading-->
+    <script src="cordova.js"></script>
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/class.js"></script>
