--- a/app_calc_3d/platforms/android/app/src/main/assets/www/index.html
+++ b/app_calc_3d/platforms/android/app/src/main/assets/www/index.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/class.js"></script>
   <script type="text/javascript" src="js/init.js"></script>
+  <script type="text/javascript" src="js/SQLLite.js"></script>
 <script type="text/javascript">
 
 </script>
