correçoes nas variaveis

--- a/app_calc_3d/platforms/android/app/src/main/assets/www/index.html
+++ b/app_calc_3d/platforms/android/app/src/main/assets/www/index.html
@@ -75,8 +75,8 @@
 
   <div class="row">
     <div class="input-field col s12">
-      <input  type="number" class="validate">
-      <label id="peso" for="peso">Peso da peça (g)</label>
+      <input id="peso" type="number" class="validate">
+      <label  for="peso">Peso da peça (g)</label>
     </div>
   </div>
   <!--TEMPO-->
@@ -89,7 +89,7 @@
 
   <div class="row">
     <!--BOTÃO-->
-    <button id="calc" data-target="modal1" class="btn modal-trigger" onclick="calculo()">CALCULAR</button>
+    <button id="calc" data-target="modal1" class="btn modal-trigger" >CALCULAR</button>
 
   </div>
 
